Fix reflow on mobile when no alerts are present.

--- a/plugins/woocommerce-admin/client/stylesheets/shared/_embed.scss
+++ b/plugins/woocommerce-admin/client/stylesheets/shared/_embed.scss
@@ -22,7 +22,7 @@
 		}
 
 		@include breakpoint( '<782px' ) {
-			padding-top: $small-header-height + 40;
+			padding-top: 30px;
 		}
 	}
 
